# glam-rs

./: .gitattributes  .gitignore  .gitmodules  .tarpaulin.toml  .travis.yml  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build_all.sh  build_all_msrv.sh  build_and_test_features.sh  build_and_test_wasm32.sh  build_and_test_wasm32_chrome.sh  build_and_test_wasm32_firefox.sh  build_and_test_wasm32_node.sh  build_and_test_wasm64.sh  clippy.toml  codegen.json  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: CI.yml  cargo-deny.yml  ci.yml  coverage.yml
benches/: affine2.rs  affine3.rs  affine3d.rs  gungraun.rs  iai.rs  mat2.rs  mat3.rs  mat3a.rs  mat3x4.rs  mat4.rs  quat.rs  support.rs  transform.rs  vec2.rs  vec3.rs  vec3a.rs  vec4.rs
benches/support/: macros.rs  mod.rs
codegen/: Cargo.toml  README.md
codegen/src/: main.rs  outputs.rs
codegen/templates/: affine.rs  affine.rs.tera  coresimd.rs.tera  float.rs.tera  macros.rs.tera  mat.rs  mat.rs.tera  quat.rs  quat.rs.tera  sse2.rs.tera  swizzle_impl.rs  swizzle_impl.rs.tera  swizzle_traits.rs.tera  vec.rs  vec.rs.tera  vec_mask.rs  vec_mask.rs.tera  wasm32.rs.tera
src/: affine2.rs  affine3.rs  affine3d.rs  align16.rs  bool.rs  camera.rs  cast.rs  core.rs  coresimd.rs  dcamera.rs  deref.rs  euler.rs  euler2.rs  f32.rs  f64.rs  features.rs  float.rs  float_ex.rs  glam_bytemuck.rs  glam_mint.rs  glam_rand.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  lib.rs  macros.rs  mat.rs  mat2.rs  mat3.rs  mat3x4.rs  mat4.rs  math.rs  neon.rs  prelude.rs  quat.rs  spirv.rs  sse2.rs  swizzles.rs  (+13 more)
src/bool/: bvec2.rs  bvec3.rs  bvec4.rs  neon.rs  scalar.rs
src/bool/coresimd/: bvec3a.rs  bvec4a.rs
src/bool/neon/: bvec3a.rs  bvec4a.rs
src/bool/scalar/: bvec3a.rs  bvec4a.rs
src/bool/sse2/: bvec3a.rs  bvec4a.rs
src/bool/wasm/: bvec3a.rs  bvec4a.rs
src/bool/wasm32/: bvec3a.rs  bvec4a.rs
src/camera/: camera_impl.rs
src/camera/lh/: proj.rs  view.rs
src/camera/lh_yup/: proj.rs  view.rs
src/camera/rh/: proj.rs  view.rs
src/camera/rh_yup/: proj.rs  view.rs
src/core/: mod.rs  sse2.rs  storage.rs  traits.rs
src/core/scalar/: mask.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
src/core/sse2/: float.rs  matrix.rs  quaternion.rs  vector.rs
src/core/traits/: matrix.rs  projection.rs  quaternion.rs  scalar.rs  vector.rs
src/core/wasm32/: float.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
src/dcamera/: camera_impl.rs
src/dcamera/lh/: proj.rs  view.rs
src/dcamera/lh_yup/: proj.rs  view.rs
src/dcamera/rh/: proj.rs  view.rs
src/dcamera/rh_yup/: proj.rs  view.rs
src/f32/: affine2.rs  affine3.rs  affine3a.rs  angle.rs  cast.rs  float.rs  funcs.rs  glam_approx.rs  glam_mint.rs  glam_rand.rs  glam_serde.rs  mat2.rs  mat3.rs  mat4.rs  math.rs  mod.rs  neon.rs  quat.rs  quat_f32.rs  quat_f32x4.rs  quat_sse2.rs  rotator.rs  scalar.rs  swizzle.rs  transform.rs  vec2.rs  vec2_f32.rs  vec2_mask.rs  vec2_sse2.rs  vec2_swizzle.rs  vec3.rs  vec3_align16.rs  vec3_f32.rs  vec3_f32x4.rs  vec3_mask.rs  vec3_mask_align16.rs  vec3_sse2.rs  vec3_swizzle.rs  vec3a.rs  vec3a_mask.rs  (+8 more)
src/f32/coresimd/: mat2.rs  mat2a.rs  mat3a.rs  mat4.rs  mat4a.rs  (+5 more)
src/f64/: daffine2.rs  daffine3.rs  dmat2.rs  dmat3.rs  dmat4.rs  dquat.rs  drotator.rs  dvec2.rs  dvec3.rs  dvec4.rs  float.rs  math.rs
src/fast_f32/: mod.rs
src/features/: impl_approx.rs  impl_arbitrary.rs  impl_borsh.rs  impl_bytemuck.rs  impl_crevice.rs  impl_encase.rs  impl_mint.rs  impl_rand.rs  impl_rkyv.rs  impl_serde.rs  impl_speedy.rs  impl_zerocopy.rs  mod.rs
src/i16/: i16vec2.rs  i16vec3.rs  i16vec4.rs
src/i32/: ivec2.rs  ivec3.rs  ivec4.rs
src/i64/: i64vec2.rs  i64vec3.rs  i64vec4.rs  lvec2.rs  lvec3.rs  lvec4.rs
src/i8/: i8vec2.rs  i8vec3.rs  i8vec4.rs
src/isize/: isizevec2.rs  isizevec3.rs  isizevec4.rs
src/sse2/: mat4.rs  mod.rs  vec3.rs  vec4.rs
src/swizzles/: dvec2_impl.rs  dvec2_impl_scalar.rs  dvec3_impl.rs  dvec3_impl_scalar.rs  dvec4_impl.rs  dvec4_impl_scalar.rs  i16vec2_impl.rs  i16vec3_impl.rs  i16vec4_impl.rs  i64vec2_impl.rs  i64vec3_impl.rs  i64vec4_impl.rs  i8vec2_impl.rs  i8vec3_impl.rs  i8vec4_impl.rs  isizevec2_impl.rs  isizevec3_impl.rs  isizevec4_impl.rs  ivec2_impl.rs  ivec2_impl_scalar.rs  ivec3_impl.rs  ivec3_impl_scalar.rs  ivec4_impl.rs  ivec4_impl_scalar.rs  lvec2_impl.rs  lvec3_impl.rs  lvec4_impl.rs  mod.rs  scalar.rs  u16vec2_impl.rs  u16vec3_impl.rs  u16vec4_impl.rs  u64vec2_impl.rs  u64vec3_impl.rs  u64vec4_impl.rs  u8vec2_impl.rs  u8vec3_impl.rs  u8vec4_impl.rs  ulvec2_impl.rs  ulvec3_impl.rs  (+27 more)
src/u16/: u16vec2.rs  u16vec3.rs  u16vec4.rs
src/u32/: uvec2.rs  uvec3.rs  uvec4.rs
src/u64/: u64vec2.rs  u64vec3.rs  u64vec4.rs  ulvec2.rs  ulvec3.rs  ulvec4.rs
src/u8/: u8vec2.rs  u8vec3.rs  u8vec4.rs
src/usize/: usizevec2.rs  usizevec3.rs  usizevec4.rs
swizzlegen/: Cargo.toml
swizzlegen/src/: main.rs
swizzles/: Cargo.toml
swizzles/src/: main.rs
templates/: affine.rs.tera  camera_impl.rs.tera  camera_mod.rs.tera  camera_proj.rs.tera  camera_view.rs.tera  coresimd.rs.tera  float.rs.tera  macros.rs.tera  mat.rs.tera  neon.rs.tera  quat.rs.tera  sse2.rs.tera  swizzle_impl.rs.tera  swizzle_test.rs.tera  swizzle_traits.rs.tera  vec.rs.tera  vec_mask.rs.tera  wasm.rs.tera  wasm32.rs.tera
test_no_std/: Cargo.toml
test_no_std/src/: lib.rs
tests/: affine2.rs  affine3.rs  affine3d.rs  angle.rs  camera.rs  eigen.rs  euler.rs  float.rs  macros_soundness.rs  mat2.rs  mat3.rs  mat3x4.rs  mat4.rs  quat.rs  support.rs  swizzle.rs  swizzles_f32.rs  swizzles_f64.rs  swizzles_i16.rs  swizzles_i32.rs  swizzles_i64.rs  swizzles_i8.rs  swizzles_isize.rs  swizzles_u16.rs  swizzles_u32.rs  swizzles_u64.rs  swizzles_u8.rs  swizzles_usize.rs  transform.rs  vec2.rs  vec3.rs  vec3_align16.rs  vec3a.rs  vec4.rs
tests/macros_soundness/: should_compile.rs  should_fail.rs  should_fail.stderr
tests/support/: as_macros.rs  macros.rs  mod.rs
tools/ci/: Cargo.toml
tools/test_no_std/: Cargo.toml
(+89 files in other folders)
