[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
clap = { version = "3", default-features = false, features = ["cargo", "std"] }
git2 = { version = "0.14", default-features = false }
globset = { version = "0.4", default-features = false }
rustfmt-wrapper = { version = "0.1" }
serde = { version = "1.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tera = { version = "1", default-features = false }
