[package]
name = "glam-no_std"
version = "0.1.0"
authors = ["Cameron Hart <c_hart@wargaming.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { path = "..", default-features = false, features = ["libm"] }
